--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -68,13 +68,16 @@
     flex-direction: column;
     z-index: 5;
 }
+.overlay__close{
+     cursor: pointer !important;
+}
 .app__navbar-smallscreen_overlay .overlay__close{
     font-size: 27px;
     color: var(--color-golden);
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 30px;
+    right: 30px;
 }
 
 .app__navbar-smallscreen_links{
