--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -20,7 +20,7 @@
     width: 100%;
     margin-top: 3rem;
 }
-.app__chef-sign p:first-child{
+.app__chef-sign p:first-child,.parrafo{
     font-family: var(--font-base);
     font-weight: 400;
     font-size: 32px;
@@ -32,6 +32,9 @@
 .app__chef-sign img{
     width: 250px;
     margin-top: 3rem;
+}
+.color-claro{
+    color: #AAA;
 }
 @media(max-width: 2000px){
     .app__chef-sign img{
